--- a/Style.css
+++ b/Style.css
@@ -28,3 +28,34 @@ nav {
 .lit2 a{
 color: red;  
 }
+@media only screen and (max-width: 600px) {
+    nav {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        background-color: rgb(155, 155, 155);
+        border: 5px black;
+        column-rule: 5px solid black;
+    }
+    .kiskep {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        padding: 5px;
+        column-rule: 5px solid black;
+    }
+    .kiskep img{
+        width: 400px;
+    }
+    .lit{
+        background-color: red;
+        margin-right: 70%
+        
+    }
+    .lit a{
+        color: white;
+    }
+    .lit2 a{
+    color: red;  
+    }
+    .nagykep{
+        width: 50%;
+}
